# hd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  debian-dependencies.list.txt  hd.cpp  hdApp.hpp  hdCommon.hpp  hdSplashScene.hpp  install-debian-dependencies.sh
assets/: CMakeLists.txt
assets/audio/: README.md
assets/shaders/: default.frag  default.vert
assets/textures/: README.md
assets/ttf/: README.md
docs/: CMakeLists copy.txt  CMakeLists.txt  CREDITS.md  ROADMAP.md  index.html
examples/: CMakeLists.txt  hd1.cpp  hd2.cpp  hd3.cpp  hd4.cpp  hd5.cpp  hd6.cpp  hddemo.cpp  imageViewer.cpp  multiWindow.cpp
include/hd/: AbstractDispatch.hpp  App.hpp  CMakeLists.txt  Common.hpp  Config.hpp.in  Debug.hpp  Dispatch.hpp  Engine.hpp  EngineComponent.hpp  Error.hpp  Events.hpp  IntDispatch.hpp  Log.hpp  Program.hpp  Rect.hpp  Scene.hpp  Shared.hpp  SplashScene.hpp  Ui.hpp  VoidDispatch.hpp  Window.hpp  Wrap.hpp  glCamera.hpp  glEBO.hpp  glProgram.hpp  glShader.hpp  glTexture.hpp  glVAO.hpp  glVBO.hpp
include/hd/evt/: AbstractDispatch.hpp  ControllerDeviceDispatch.hpp  ControllerDispatch.hpp  DropDispatch.hpp  EngineDispatch.hpp  IntDispatch.hpp  JoyDeviceDispatch.hpp  JoyDispatch.hpp  KeyDispatch.hpp  KeyboardDispatch.hpp  MouseButtonDispatch.hpp  MouseDispatch.hpp  SDL_EventDispatch.hpp  TextDispatch.hpp  VoidDispatch.hpp  WindowDispatch.hpp  WindowIdDispatch.hpp
include/hd/gl/: Camera.hpp  EBO.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  VAO.hpp  VBO.hpp
include/hd/joy/: Device.hpp
include/hd/sdl/: ControllerDeviceDispatch.hpp  ControllerDispatch.hpp  Display.hpp  DropDispatch.hpp  EngineDispatch.hpp  EventDispatch.hpp  Font.hpp  GLContext.hpp  GameController.hpp  JoyDeviceDispatch.hpp  JoyDispatch.hpp  Joystick.hpp  KeyDispatch.hpp  KeyboardDispatch.hpp  MixerChannel.hpp  MixerChunk.hpp  MouseButtonDispatch.hpp  MouseDispatch.hpp  Surface.hpp  TextDispatch.hpp  Window.hpp  WindowDispatch.hpp  WindowIdDispatch.hpp  events.hpp
patterns/: CMakeLists.txt
src/: CMakeLists.txt  hd.cpp  hdApp.cpp  hdApp.hpp  hdCommon.cpp  hdEvents.cpp  hdEvents.hpp  hdScene.cpp  hdScene.hpp  hdShared.cpp  hdShared.hpp  hdSplashScene.cpp
src/hd/: AbstractDispatch.cpp  App.cpp  CMakeLists.txt  Common.cpp  Dispatch.cpp  Engine.cpp  EngineComponent.cpp  Events.cpp  IntDispatch.cpp  Program.cpp  Rect.cpp  Scene.cpp  Shared.cpp  SplashScene.cpp  Ui.cpp  VoidDispatch.cpp  Window.cpp  Wrap.cpp  glCamera.cpp  glEBO.cpp  glProgram.cpp  glShader.cpp  glTexture.cpp  glVAO.cpp  glVBO.cpp
src/hd/evt/: ControllerDeviceDispatch.cpp  ControllerDispatch.cpp  DropDispatch.cpp  EngineDispatch.cpp  IntDispatch.cpp  JoyDeviceDispatch.cpp  JoyDispatch.cpp  KeyDispatch.cpp  KeyboardDispatch.cpp  MouseButtonDispatch.cpp  MouseDispatch.cpp  SDL_EventDispatch.cpp  TextDispatch.cpp  VoidDispatch.cpp  WindowDispatch.cpp  WindowIdDispatch.cpp
src/hd/gl/: Camera.cpp  EBO.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VAO.cpp  VBO.cpp
src/hd/joy/: Device.cpp
src/hd/sdl/: ControllerDeviceDispatch.cpp  ControllerDispatch.cpp  Display.cpp  DropDispatch.cpp  EngineDispatch.cpp  EventDispatch.cpp  Font.cpp  GLContext.cpp  GameController.cpp  JoyDeviceDispatch.cpp  JoyDispatch.cpp  Joystick.cpp  KeyDispatch.cpp  KeyboardDispatch.cpp  MixerChannel.cpp  MixerChunk.cpp  MouseButtonDispatch.cpp  MouseDispatch.cpp  Surface.cpp  TextDispatch.cpp  Window.cpp  WindowDispatch.cpp  WindowIdDispatch.cpp  events.cpp
test/: CMakeLists.txt  keycode.cpp  sdlWindowTest.cpp  wrapTest.cpp
