cmake_minimum_required(VERSION 3.18)
project(hd VERSION 0.1.0.0 DESCRIPTION "maybe a game, maybe a library.. who knows." HOMEPAGE_URL "https://github.com/BadQuanta/hd" LANGUAGES CXX)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)


include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_gfx REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(SDL2_net REQUIRED)
set(OpenGL_GL_PREFERENCE, GLVND)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(Doxygen)
add_subdirectory(include/hd)
add_subdirectory(src/hd)
add_subdirectory(bin)
add_subdirectory(docs)
add_subdirectory(assets)
add_subdirectory(test)
set(CPACK_PACKAGE_CONTACT "badquanta@gmail.com")
set(CPACK_DEBIAN_PACKAGE_DEPENDS libsdl2-2.0-0 libsdl2-gfx-1.0-0 libsdl2-image-2.0-0 libsdl2-mixer-2.0-0 libsdl2-net-2.0-0;libsdl2-ttf-2.0-0)
set(CPACK_DEBIAN_DEBUGINFO_PACKAGE ON)
set(CPACK_DEBIAN_PACKAGE_LICENSE "gpl-3.0")
set(CPACK_GENERATOR DEB RPM TGZ ZIP)
set(CPACK_RESOURCE_FILE_LICENSE ${PROJECT_SOURCE_DIR}/lgpl-3.0.md)
set(CPACK_SOURCE_GENERATOR DEB RPM TGZ ZIP)
list(APPEND CPACK_SOURCE_IGNORE_FILES .*/build/.*)
include(GNUInstallDirs)
install(TARGETS hd LIBRARY DESTINATION lib )
install(TARGETS hddemo RUNTIME DESTINATION bin )
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ ${PROJECT_BINARY_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
        FILES_MATCHING PATTERN "*.hpp")
include(CPack)