list(APPEND LIBHD_COMPONENTS hdCommon.cpp hdScene.cpp hdShared.cpp hdSplashScene.cpp hdApp.cpp hdEvents.cpp)
#add_executable(hddemo hd.cpp ${LIBHD_COMPONENTS})
add_library(hd ${LIBHD_COMPONENTS} )
#target_link_libraries(hddemo SDL2::Main SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX)
target_link_libraries(hd SDL2::Core SDL2::Image SDL2::TTF SDL2::Net SDL2::Mixer SDL2::GFX)